--- a/atoms/default/client/css/main.scss
+++ b/atoms/default/client/css/main.scss
@@ -1,9 +1,41 @@
 @import "fonts";
 @import "mq";
 @import "palette";
+@import "header";
 // @import "enhancer";
-
 .interactive-atom {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.immersive-main-media__headline-container
+  .immersive-main-media__headline-container--dark {
+  background-color: #121212;
+}
+
+.content__headline {
+  color: #e05e00;
+  background-color: #121212;
+  padding-left: 10px;
+  font-size: 3.125rem;
+  line-height: 3.5rem;
+  font-family: Guardian Titlepiece;
+}
+
+.content--interactive .content__main-column--interactive {
+  background: none;
+  img {
+    height: auto;
+  }
+
+  @include mq(tablet) {
+    width: 620px;
+    margin-left: 0;
+  }
+  @include mq(leftCol) {
+    margin-left: 160px;
+  }
+  @include mq(wide) {
+    margin-left: 240px;
+  }
 }
