--- a/atoms/default/client/css/_header.scss
+++ b/atoms/default/client/css/_header.scss
@@ -73,8 +73,6 @@ header.content__head--interactive,
     }
   }
 
-
-
   .content__headline,
   .headline {
     padding: 6px 10px 20px;
@@ -83,7 +81,7 @@ header.content__head--interactive,
     font-family: "Guardian Titlepiece", "Guardian Headline Full",
       "Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
 
-    color: #FEF0E8;
+    color: #fef0e8;
     background-color: #241006;
     position: absolute;
     left: -10px;
@@ -106,6 +104,7 @@ header.content__head--interactive,
       padding-top: 0;
       margin-top: -9px;
       line-height: 1;
+      left: -170px;
       body.ios &,
       body.android & {
         background-color: transparent;
@@ -114,6 +113,7 @@ header.content__head--interactive,
     @include mq(wide) {
       font-size: 64px;
       padding-right: 40px;
+      left: -250px;
     }
   }
 
@@ -122,15 +122,6 @@ header.content__head--interactive,
     height: $mobile-header-height * 1vw;
     @include mq(mobileLandscape) {
       height: 100%;
-    }
-  }
-
-  @include mq(leftCol) {
-    .content__main-column {
-      margin-left: calc(50% + 20px);
-      width: 50%;
-      padding-left: 0;
-      position: relative;
     }
   }
 
