--- a/atoms/default/client/css/_header.scss
+++ b/atoms/default/client/css/_header.scss
@@ -4,49 +4,64 @@ $mobileLandscape-header-height: 600px;
 
 header.content__head--interactive,
 .article .article__header {
-  height: 0;
-  padding-bottom: $mobile-header-height * 1vw;
-  background-size: auto ($mobile-header-height * 1vw);
-  background-position: 90% 50%;
-  position: relative;
-  z-index: 10;
-  margin-bottom: 250px;
 
-  @include mq(mobileLandscape) {
-    padding-bottom: 0;
-    background-size: auto 600px;
-    height: $mobileLandscape-header-height;
-  }
-  @include mq(tablet) {
-    width: 740px;
-    background-size: auto 640px;
-    height: 555px;
-    margin: 0 auto;
-    margin-bottom: 300px;
-  }
-  @include mq(desktop) {
-    width: 980px;
-    height: 680px;
-    background-size: auto 735px;
-  }
-  @include mq(leftCol) {
-    width: 1140px;
-    height: 855px;
-    background-size: auto 855px;
-  }
-  @include mq(wide) {
-    width: 1300px;
-    height: 700px;
-    // background-position: 90% 50%;
-    background-size: auto 900px;
-    .android &,
-    .ios & {
-      width: 1200px;
+  // Picture pseudoelement
+  & > .gs-container:before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    height: $mobile-header-height * 1vw;
+    background-size: auto ($mobile-header-height * 1vw);
+    background-position: 90% 50%;
+
+    @include mq(mobileLandscape) {
+      background-size: auto 600px;
+      height: $mobileLandscape-header-height;
+    }
+    @include mq(tablet) {
+      // width: 740px;
+      background-size: auto 640px;
+      height: 555px;
+      margin: 0 auto;
+      margin-bottom: 300px;
+    }
+    @include mq(desktop) {
+      // width: 980px;
+      height: 680px;
+      background-size: auto 735px;
+    }
+    @include mq(leftCol) {
+      // width: 1140px;
+      height: 855px;
+      background-size: auto 855px;
+    }
+    @include mq(wide) {
+      // width: 1300px;
+      height: 700px;
+      // background-position: 90% 50%;
+      background-size: auto 900px;
+      // .android &,
+      // .ios & {
+      //   width: 1200px;
+      // }
     }
   }
 
+  // height: 0;
+  // padding-bottom: $mobile-header-height * 1vw;
+  // position: relative;
+  // z-index: 10;
+  // margin-bottom: 250px;
+
+
+
   .content__labels,
   .article-kicker {
+    // position: absolute;
     padding-top: 10px;
     body.ios &,
     body.android & {
@@ -73,6 +88,7 @@ header.content__head--interactive,
     }
   }
 
+
   .content__headline,
   .headline {
     padding: 6px 10px 20px;
@@ -80,31 +96,32 @@ header.content__head--interactive,
     line-height: 1;
     font-family: "Guardian Titlepiece", "Guardian Headline Full",
       "Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
-
+    margin-left: -10px;
+    margin-top: 117vw;
     color: #fef0e8;
     background-color: #241006;
-    position: absolute;
-    left: -10px;
-    bottom: -93px;
 
+    @include mq(mobileLandscape) {
+      margin-top: 550px;
+    }
     @include mq(tablet) {
       line-height: 0.95;
       font-size: 42px;
-      // bottom: 0;
-      left: -20px;
-      right: 220px;
+      margin-top: 503px;
+      margin-left: -20px;
+      padding-left: 20px;
     }
     @include mq(desktop) {
       padding: 6px 20px 20px;
       font-size: 64px;
-      right: -120px;
+      margin-top: 547px;
     }
     @include mq(leftCol) {
       font-size: 64px;
       padding-top: 0;
-      margin-top: -9px;
       line-height: 1;
-      left: -170px;
+      margin-top: 722px;
+      margin-left: -180px;
       body.ios &,
       body.android & {
         background-color: transparent;
@@ -113,7 +130,8 @@ header.content__head--interactive,
     @include mq(wide) {
       font-size: 64px;
       padding-right: 40px;
-      left: -250px;
+      margin-top: 565px;
+      margin-left: -260px;
     }
   }
 
@@ -124,11 +142,12 @@ header.content__head--interactive,
     line-height: 1;
     font-family: "Guardian Egyptian Web", "Guardian Headline Full",
       "Guardian Headline", "Guardian Egyptian Web", Georgia, serif;
+    margin-left: -10px;
 
     color: #241006;
-    position: absolute;
-    left: -10px;
-    bottom: -250px;
+    // position: absolute;
+    // left: -10px;
+    // bottom: -250px;
 
     @include mq(tablet) {
       line-height: auto;
@@ -160,13 +179,13 @@ header.content__head--interactive,
     }
   }
 
-  .content__main-column,
-  & > .gs-container {
-    height: $mobile-header-height * 1vw;
-    @include mq(mobileLandscape) {
-      height: 100%;
-    }
-  }
+  // .content__main-column,
+  // & > .gs-container {
+  //   height: $mobile-header-height * 1vw;
+  //   @include mq(mobileLandscape) {
+  //     height: 100%;
+  //   }
+  // }
 
   .ios &,
   .android & {
