--- a/atoms/default/client/css/_header__bgimage.scss
+++ b/atoms/default/client/css/_header__bgimage.scss
@@ -1,7 +1,11 @@
 header.content__head--interactive,
 .article__header {
-  background-color: #121212;
-  background-image: url(https://uploads.guim.co.uk/2020/05/13/SL_compressed.jpg);
+
+  & > .gs-container:before {
+    background-color: #121212;
+    background-image: url(https://uploads.guim.co.uk/2020/05/13/SL_compressed.jpg);
+  }
+
   // @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   //   background-image: url(https://uploads.guim.co.uk/2020/03/25/585b64c4cc8b5c2200cc535e9d60cb8eac256f7a.1600.jpg);
   // }
